tests/snapshots/regression-spool-zarmazd_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Zarmazd
ship/capacitorStablePercentage               = 57.835284
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 10.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 26.400000
ship/passiveShieldEffectiveRechargeRate      = 3.895131
ship/passiveShieldRechargeRate               = 2.166667
ship/ehp                                     = 14187.529024
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.075000
ship/shieldExplosiveDamageEffectiveResonance = 0.031250
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.093750
ship/armorExplosiveDamageEffectiveResonance  = 0.050000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 1460.674142
ship/hullEhp                                 = 3451.492451
ship/armorEhp                                = 9275.362431
ship/shieldDamageEffectiveResonance          = 0.556250
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.431250
ship/powerFree                               = 791.500000
ship/cpuFree                                 = 384.250000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 27.143085
ship/capacitorPeakDelta                      = 5.972495
ship/capacitorPeakLoad                       = 16.031250
ship/capacitorPeakRecharge                   = 22.003745
ship/alignTime                               = 6.899088
ship/hp                                      = 2312.500000
ship/powerOutput                             = 1187.500000
ship/powerLoad                               = 396.000000
ship/maxVelocity                             = 297.500000
ship/cpuOutput                               = 456.250000
ship/cpuLoad                                 = 72.000000
ship/rechargeRate                            = 333750.000000
ship/agility                                 = 0.486000
ship/maxTargetRange                          = 87500.000000
ship/scanSpeed                               = 3375.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 26.400000
ship/shieldCapacity                          = 812.500000
ship/armorHP                                 = 4000.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 2937.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 475.000000
ship/eliteBonusLogistics1                    = -75.000000
ship/eliteBonusLogistics2                    = 100.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusPC1                            = 500.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/eliteBonusLogistics4                    = 37.500000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

outgoing_effect_1/type                 = Heavy Mutadaptive Remote Armor Repairer II
outgoing_effect_1/effect               = remoteArmorRepairRate
outgoing_effect_1/spoolMultiplier      = 2.500000
outgoing_effect_1/armorRepairRate      = 426.666667
outgoing_effect_1/maxRange             = 72000.000000
outgoing_effect_1/duration             = 6000.000000
outgoing_effect_1/armorDamageAmount    = 1024.000000
outgoing_effect_1/falloffEffectiveness = 0.000000

high_1/type                 = Heavy Mutadaptive Remote Armor Repairer II
high_1/state                = active
high_1/spoolMultiplierBonus = 1.500000
high_1/spoolMultiplier      = 2.500000
high_1/armorRepairRate      = 426.666667
high_1/capacitorPeakLoad    = 16.031250
high_1/cycleTime            = 6000.000000
high_1/capacitorNeed        = 96.187500
high_1/maxRange             = 72000.000000
high_1/armorDamageAmount    = 1024.000000
high_1/heatDamage           = 1.500000
