tests/snapshots/regression-stacking_per_operator-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Rifter
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 8.000000
ship/passiveShieldEffectiveRechargeRate      = 2.837438
ship/passiveShieldRechargeRate               = 1.800000
ship/ehp                                     = 2440.085574
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.138125
ship/armorKineticDamageEffectiveResonance    = 0.159375
ship/armorExplosiveDamageEffectiveResonance  = 0.191250
ship/armorEmDamageEffectiveResonance         = 0.034458
ship/shieldEhp                               = 709.359597
ship/hullEhp                                 = 870.646710
ship/armorEhp                                = 860.079267
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.523208
ship/powerFree                               = 38.000000
ship/cpuFree                                 = 40.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 5.000000
ship/capacitorPeakRecharge                   = 5.000000
ship/alignTime                               = 4.733364
ship/powerLoad                               = 3.000000
ship/cpuLoad                                 = 90.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/armorEmDamageResonance                  = 0.137830
ship/armorExplosiveDamageResonance           = 0.765000
ship/armorKineticDamageResonance             = 0.637500
ship/armorThermalDamageResonance             = 0.552500
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/shipBonusMF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusMF2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

low_1/type  = Damage Control II
low_1/state = online

low_2-3/type  = EM Energized Membrane II
low_2-3/state = online

ship                           = skill Minmatar Frigate needs 1 has 0
ship                           = skill Spaceship Command needs 1 has 0
low_1/Damage Control II        = skill Hull Upgrades needs 4 has 0
low_1/Damage Control II        = skill Mechanics needs 1 has 0
low_2/EM Energized Membrane II = skill Hull Upgrades needs 5 has 0
low_2/EM Energized Membrane II = skill Mechanics needs 1 has 0
low_3/EM Energized Membrane II = skill Hull Upgrades needs 5 has 0
low_3/EM Energized Membrane II = skill Mechanics needs 1 has 0
