tests/snapshots/regression-structure_bonus-powered_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                      = Astrahus
ship/capacitorStablePercentage                 = 100.000000
ship/maxTargetsCharacter                       = 0.000000
ship/upgradeFree                               = 400.000000
ship/scanStrength                              = 500.000000
ship/passiveShieldEffectiveRechargeRate        = 0.044999
ship/passiveShieldRechargeRate                 = 0.035999
ship/ehp                                       = 30149999.550730
ship/shieldThermalDamageEffectiveResonance     = 0.200000
ship/shieldKineticDamageEffectiveResonance     = 0.200000
ship/shieldExplosiveDamageEffectiveResonance   = 0.200000
ship/shieldEmDamageEffectiveResonance          = 0.200000
ship/hullThermalDamageEffectiveResonance       = 0.200000
ship/hullKineticDamageEffectiveResonance       = 0.200000
ship/hullExplosiveDamageEffectiveResonance     = 0.200000
ship/hullEmDamageEffectiveResonance            = 0.200000
ship/armorThermalDamageEffectiveResonance      = 0.200000
ship/armorKineticDamageEffectiveResonance      = 0.200000
ship/armorExplosiveDamageEffectiveResonance    = 0.200000
ship/armorEmDamageEffectiveResonance           = 0.200000
ship/shieldEhp                                 = 17999999.731779
ship/hullEhp                                   = 2249999.966472
ship/armorEhp                                  = 9899999.852479
ship/shieldDamageEffectiveResonance            = 0.800000
ship/hullDamageEffectiveResonance              = 0.800000
ship/armorDamageEffectiveResonance             = 0.800000
ship/powerFree                                 = 930000.000000
ship/cpuFree                                   = 17400.000000
ship/capacitorDepletesIn                       = -1.000000
ship/capacitorPeakDeltaPercentage              = 100.000000
ship/capacitorPeakDelta                        = 173.611111
ship/capacitorPeakRecharge                     = 173.611111
ship/powerLoad                                 = 570000.000000
ship/cpuLoad                                   = 6600.000000
ship/shieldCapacity                            = 14400000.000000
ship/armorHP                                   = 7920000.000000
ship/capacitorCapacity                         = 250000.000000
ship/structureFullPowerStateHitpointMultiplier = 4.000000
ship/hiddenArmorHPMultiplier                   = 1.100000
ship/structurePowerStateArmorPlatingMultiplier = 1.000000

medium_1/type  = Standup Cap Battery I
medium_1/state = online

low_1/type  = Standup Layered Armor Plating I
low_1/state = online

service_1/type                          = Standup Cloning Center I
service_1/state                         = online
service_1/serviceModuleFuelAmount       = 7.500000
service_1/serviceModuleFuelOnlineAmount = 540.000000
